Bug 1603504 - Use release_acquire in nsStringBuffer::IsReadonly for TSan build r=froydnj

TSan reports a benign race when accessing a string between main thread and IPDL background thread. The reason is that we use `memory_order_relaxed` to check the reference count of StringBuffer. To avoid the benign race, this patch uses `memory_order_acquire` to perform acquire memory synchronization only for TSan build.

Differential Revision: https://phabricator.services.mozilla.com/D57620